<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/searchDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="80dp"
        android:padding="8dp"
        android:text="@string/paired_k" />

    <Button
        android:id="@+id/connect_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="220dp"
        android:padding="8dp"
        android:text="@string/connect_k" />

    <TextView
        android:id="@+id/Paired_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="105dp"
        android:layout_marginStart="8dp"
        android:text="@string/paired_kk" />

    <TextView
        android:id="@+id/BT_devices_txt"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="130dp" />

    <TextView
        android:id="@+id/sb6txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb6txt_k" />

    <SeekBar
        android:id="@+id/seekBar6"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp" />

    <TextView
        android:id="@+id/sb5txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="285dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb5txt_k" />

    <SeekBar
        android:id="@+id/seekBar5"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="315dp" />

    <TextView
        android:id="@+id/sb4txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb4txt_k" />

    <SeekBar
        android:id="@+id/seekBar4"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp" />

    <TextView
        android:id="@+id/sb3txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="455dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb3txt_k" />

    <SeekBar
        android:id="@+id/seekBar3"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="485dp" />

    <TextView
        android:id="@+id/sb2txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="540dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb2txt_k" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp" />

    <TextView
        android:id="@+id/sb1txt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="625dp"
        android:layout_marginStart="65dp"
        android:text="@string/sb1txt_k" />

    <SeekBar
        android:id="@+id/seekBar1"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="655dp" />


</RelativeLayout>
